# pyics

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml  wheels.yml
src/pyics/: __init__.py  __version__.py  constants.py  io.py  libics.0.dylib  library.py
src/pyics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
